--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
   <meta name="twitter:image" content="https://farfallaestudio.com.co/og-image.jpg" />
 
   <link rel="canonical" href="https://farfallaestudio.com.co" />
+
+<!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N3T2YG5SZF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-N3T2YG5SZF');
+    </script>
+
+
 </head>
 
   <body>
